Wed Jun 22 23:51:15 GMT 2011  Richard Boulton <richard@tartarus.org>

	* configure.ac: Correct tiny typo in error message when zlib isn't
	  found.

Tue Jun 21 04:08:29 GMT 2011  Olly Betts <olly@survex.com>

	* common/autoptr.h: Update comment about why we have this file.  It's
	  no longer a concern that we might need our own AutoPtr implementation
	  but we are likely to want to be able to migrate to unique_ptr easily
	  as C++0x features become more widely available.

Tue Jun 21 02:26:36 GMT 2011  Olly Betts <olly@survex.com>

	* HACKING,common/pretty.h,configure.ac,tests/internaltest.cc: Fix a
	  few lingering references to RefCntPtr and RefCntBase.

Tue Jun 21 02:01:25 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/brass/,backends/chert/,backends/database.cc,
	  backends/inmemory/inmemory_alltermslist.h,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/multi/multi_alltermslist.cc,
	  backends/multi/multi_valuelist.cc,backends/remote/,common/,
	  docs/doxygen_api.conf.in,include/Makefile.mk,include/xapian/,
	  matcher/msetpostlist.h,matcher/multimatch.cc,
	  queryparser/queryparser_internal.h,
	  queryparser/termgenerator_internal.h,tests/internaltest.cc: Convert
	  to use xapian/intrusive_ptr.h instead of xapian/base.h.

Mon Jun 20 23:55:10 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/intrusive_ptr.h: Unmodified version of
	  boost/smart_ptr/intrusive_ptr.hpp as of Boost 1.42 (committed to aid
	  merging changes in the future).

Mon Jun 20 12:46:47 GMT 2011  Olly Betts <olly@survex.com>

	* common/databasereplicator.h,languages/steminternal.h,tests/harness/:
	  Remove inclusions of xapian/base.h from files which don't use
	  RefCntPtr or RefCntBase.

Mon Jun 20 11:33:03 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/base.h: Remove unnecessary check for self-assignment
	  as it isn't a common case and the current code copes gracefully with
	  it anyway.
