@@ -1,7 +1,7 @@
 /** @file slowvaluelist.cc
  * @brief Slow implementation for backends which don't streamed values.
  */
-/* Copyright (C) 2008 Olly Betts
+/* Copyright (C) 2008,2011 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -66,7 +66,7 @@ SlowValueList::next()
 	    // Open document lazily so that we don't waste time checking for
 	    // its existence.
 	    AutoPtr<Xapian::Document::Internal>
-		doc(db.get_document_lazily(current_did));
+		doc(db.get_document_lazily_(current_did));
 	    if (!doc.get()) continue;
 	    string value = doc->get_value(slot);
 	    if (!value.empty()) {
@@ -110,7 +110,7 @@ SlowValueList::check(Xapian::docid did)
     current_did = did;
     try {
 	AutoPtr<Xapian::Document::Internal>
-	    doc(db.get_document_lazily(current_did));
+	    doc(db.get_document_lazily_(current_did));
 	if (doc.get()) {
 	    current_value = doc->get_value(slot);
 	    if (!current_value.empty()) return true;
