@@ -1,7 +1,7 @@
 /** @file valuestreamdocument.cc
  * @brief A document which gets its values from a ValueStreamManager.
  */
-/* Copyright (C) 2009 Olly Betts
+/* Copyright (C) 2009,2011 Olly Betts
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -56,7 +56,7 @@ ValueStreamDocument::do_get_value(Xapian::valueno slot) const
 {
 #ifdef XAPIAN_ASSERTIONS_PARANOID
     if (!doc)
-	doc = db.get_document_lazily(did);
+	doc = db.get_document_lazily_(did);
 #endif
 
     pair<map<Xapian::valueno, ValueList *>::iterator, bool> ret;
@@ -96,7 +96,7 @@ void
 ValueStreamDocument::do_get_all_values(map<Xapian::valueno, string> & v) const
 {
     if (!doc)
-	doc = db.get_document_lazily(did);
+	doc = db.get_document_lazily_(did);
     return doc->do_get_all_values(v);
 }
 
@@ -104,6 +104,6 @@ string
 ValueStreamDocument::do_get_data() const
 {
     if (!doc)
-	doc = db.get_document_lazily(did);
+	doc = db.get_document_lazily_(did);
     return doc->do_get_data();
 }
